--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -20,9 +20,7 @@
             android:layout_height="600dp"
             android:gravity="center_vertical"
             android:padding="20dp"
-            android:text="show guide!"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            android:text="show guide!"/>
 
 
         <TextView
